--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.27",
+    "@types/react": "^18.0.7",
     "eslint": "8.7.0",
-    "eslint-config-next": "^12.0.8"
+    "eslint-config-next": "^12.0.8",
+    "typescript": "^4.6.3"
   }
 }
