--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check ./src",
+    "format:fix": "prettier --write ./src"
   },
   "dependencies": {
     "next": "^12.0.8",
@@ -16,6 +18,7 @@
     "@types/react": "^18.0.7",
     "eslint": "8.7.0",
     "eslint-config-next": "^12.0.8",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   }
 }
