--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     types: [closed]
 
 jobs:
-  update-docs:
+  deploy:
     runs-on: ubuntu-20.04
     if: github.event.pull_request.merged == true
     steps:
