--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,7 @@ jobs:
       run: npm install
     - name: Build
       run: npm run build
+    - name: Format check
+      run: npm run format
     - name: Test
       run: npm test
