--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+        node-version-file: ./.node-version
       - name: Install dependencies
         run: npm install
       - name: Build and export as a static file
